--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "drifting",
+  "homepage": "http://C08WeCanCodeIt.github.io/drifting-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
