--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drifting",
-  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app",
+  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
