--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,13 @@
 /.pnp
 .pnp.js
 /servers/bottles/node_modules
+/drifting-app/node_modules
 
 # testing
 /coverage
 
 # production
-#/build
+/build
 
 # misc
 .DS_Store
