--- a/drifting-app/package.json
+++ b/drifting-app/package.json
@@ -11,7 +11,7 @@
   "homepage": "https://C08WeCanCodeIt.github.io/drifting-app",
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "rpm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
