--- a/drifting-app/package.json
+++ b/drifting-app/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
-  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app",
+  "homepage": "https://c08wecancodeit.github.io/drifting-app/drifting-app/build",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
