--- a/drifting-app-alt/package.json
+++ b/drifting-app-alt/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "drifting",
-  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app/",
+  "name": "drifting-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "reactstrap": "^8.0.0"
+    "react-scripts": "2.1.8"
   },
+  "homepage": "https://c08wecancodeit.github.io/drifting-app/drifting-app/build",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
@@ -28,8 +25,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  ]
 }
