--- a/drifting-app/package.json
+++ b/drifting-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drifting",
-  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app/",
+  "homepage": "https://C08WeCanCodeIt.github.io/drifting-app/drifting-app/build",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
